@@ -4,22 +4,12 @@ plugins {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(20)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
 jar {
     archiveBaseName = 'std_lib'
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += "--enable-preview"
-}
-tasks.withType(Test).configureEach {
-     jvmArgs += "--enable-preview"
-}
-tasks.withType(JavaExec).configureEach {
-     jvmArgs += "--enable-preview"
 }
 
 dependencies {
